--- a/java/java-hello-world/pom.xml
+++ b/java/java-hello-world/pom.xml
@@ -18,6 +18,7 @@
 	<properties>
         <java.version>1.8</java.version>
         <checkstyle.config.location>./checkstyle.xml</checkstyle.config.location>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 
 	<dependencies>
