--- a/nodejs/nodejs-guestbook/kubernetes-manifests/mongo.service.yaml
+++ b/nodejs/nodejs-guestbook/kubernetes-manifests/mongo.service.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: node-guestbook
     tier: db
-  name: node-guestbook-mongodb
+  name: mongo-service
 spec:
   ports:
     - port: 27017
