--- a/nodejs/nodejs-guestbook/kubernetes-manifests/guestbook-backend.deployment.yaml
+++ b/nodejs/nodejs-guestbook/kubernetes-manifests/guestbook-backend.deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: node-guestbook-backend
@@ -7,10 +7,6 @@ metadata:
     tier: backend
 spec:
   replicas: 1
-  selector:
-    matchLabels:
-      app: node-guestbook
-      tier: backend
   template:
     metadata:
       labels:
@@ -23,8 +19,20 @@ spec:
         ports:
         - name: http-server
           containerPort: 8080
+        - name: debug
+          containerPort: 9229
         env:
         - name: PORT
           value: "8080"
-        - name: GUESTBOOK_DB_ADDR
-          value: "node-guestbook-mongodb:27017"
+        - name: MONGO_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: mongo-secret
+              key: username
+        - name: MONGO_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mongo-secret
+              key: password
+        - name: MONGO_HOST
+          value: "mongo-service"
