--- a/nodejs/nodejs-guestbook/src/frontend/package.json
+++ b/nodejs/nodejs-guestbook/src/frontend/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node --inspect=9229 app.js "
+    "start": "node --inspect=9229 app.js ",
+    "test": "mocha app.test.js --exit"
   },
-  "author": "Google Inc.",
-  "license": "0BSD",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
     "express": "^4.16.4",
+    "mocha": "^6.0.2",
     "moment": "^2.24.0",
     "pug": "^2.0.3"
   }
